# propelsync

./: .dockerignore  .env.example  .gitignore  BUILD_AND_RELEASE.md  CICD.md  DEPLOYMENT.md  Dockerfile  README.md  agents.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-deploy.yml
alembic/: README  env.py
alembic/versions/: 20260620_0001_create_tenants.py  20260620_0002_create_users.py  20260620_0003_create_audit_logs.py  20260620_0004_create_societies.py  20260620_0005_create_buildings.py  20260620_0006_create_wings.py  20260620_0007_create_flats.py  20260620_0008_create_memberships.py  20260620_0009_create_owners.py  20260620_0010_create_flat_ownerships.py  20260620_0011_create_residents.py  20260620_0012_create_flat_types_and_building_floors.py  20260620_0013_create_charge_types.py  20260620_0014_create_chart_of_accounts.py  20260620_0015_add_chart_account_parent.py  20260620_0016_create_billing_rules.py  20260620_0017_add_billing_rule_schedule.py  20260620_0018_create_invoices.py  20260620_0019_create_document_sequences.py  20260620_0020_relax_invoice_flat_period.py  20260620_0021_create_payments.py  20260620_0022_create_vendors.py  20260620_0023_create_expense_categories.py  20260620_0024_create_expenses.py  20260620_0025_create_expense_payments.py  20260620_0026_create_journals.py  20260620_0027_create_account_transfers.py  (+12 more)
app/: README.md  main.py
app/api/: deps.py
frontend/: Dockerfile.prod  README.md  index.html  nginx.prod.conf  package.json  vite.config.js  vite.config.ts
(+225 files in other folders)
