[project]
name = "propelsync"
version = "0.1.0"
description = "SaaS ERP for housing society accounting."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "PyJWT[crypto]>=2.10.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
